# AVM

./: CMakeLists.txt  README.md  update-manifest.example.json
core/: CMakeLists.txt  gapps.cpp  image_manager.cpp  vm_manager.cpp
core/hypervisor/: hypervisor_detect.cpp
docs/: architecture.md  building.md  device-profiles.md  launcher.md  phase3-input-overlay.md  phase4-gamepad-adb-virtio.md  phase5-version-selector.md  phase6-gapps-safetynet.md  setup-linux.md  setup-windows.md
gpu/: CMakeLists.txt  gfxstream_bridge.cpp  opengl_renderer.cpp  vulkan_renderer.cpp
include/avm/core/: config.h  gapps.h  vm_manager.h
include/avm/gpu/: gpu_renderer.h
include/avm/input/: input_bridge.h  keymapper.h  virtio_input.h
input/: CMakeLists.txt
input/keymapper/: keymapper.cpp
launcher/: __init__.py  app.py  config.py  main.py  vm_controller.py  workers.py
launcher/widgets/: game_card.py  game_grid.py  game_profile_dialog.py  profile_editor.py  search_bar.py  sidebar.py
launcher/windows/: first_run.py  main_window.py
overlay/: CMakeLists.txt
packaging/macos/: build-app-bundle.sh
profiles/: codm.json  genshin.json  honkai-sr.json  mlbb.json  pubg.json  wuthering-waves.json
scripts/: bootstrap-macos.sh  bootstrap-windows.ps1  bootstrap.sh  build.sh  gapps-inject.sh  safetynet-patch.sh
src/: main.cpp
tools/: avm-image-pull.py
